cmake_minimum_required(VERSION 2.8)
project(AtCoder CXX)
# サブディレクトリを登録
add_subdirectory(Project1)
add_subdirectory(GoogleTest)

set(CMAKE_SOURCE_DIR ${CMAKE_HOME_DIRECTORY})
set(CMAKE_BINARY_DIR ${CMAKE_HOME_DIRECTORY}/build)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(DEFAULT_OUT_OF_SOURCE_FOLDER "build")

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/debug)
